fix for modal on iphone 6

--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,7 @@ body {
     background-color: white; 
     color: $black;
     overflow-x: hidden;
+    position: relative;
 
     font-family: 'Helvetica';
 }
